<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SELL AN ITEM"
            android:textSize="24sp"
            android:gravity="center"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:padding="7dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Upload Image"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </FrameLayout>


        <EditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name_hint" />

        <EditText
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_description_hint" />

        <EditText
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_price_hint" />

        <EditText
            android:id="@+id/item_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_condition_hint" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sell_item_category_array" />
        <!-- Submit button -->
        <Button
            android:id="@+id/sell_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text" />

    </LinearLayout>
</ScrollView>
